# serialize.modern

./: BUILDING.md  CLAUDE.md  CMakeLists.txt  FUTURE.md  README.md  SCHEMA.md  WEAKNESSES.md  bench.cpp  codegen_audit.cpp  codegen_audit.py  codegen_audit_bad.cpp  example.cpp  fuzz.cpp  serialize.h  wire_compat.cpp
.github/workflows/: ci.yml
